tests/sksl/errors/golden/SwizzleDuplicateOutput.glsl
### Compilation failed:

error: 3: cannot write to the same swizzle field more than once
1 error
